# weather-forecast-technical-assignment

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
core/: openapi_metadata.py  settings.py  urls.py
weather/: exceptions.py  serializers.py  services.py  urls.py  views.py
weather/tests/: test_district_services.py  test_views.py  test_weather_forcaster.py
